# Achievo

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/: App.py  Goal.py  Main.py  ScreenComponents.py  Task.py  Utilities.py
