[metadata]
name = Achievo
version = 1.0
license = MIT
description = Simplest ToDo/Goal Setting Application out there.
long_description = file: README.rst
author = Ayhan Mehdiyev
author_email = mehdiyev.ayyhan@gmail.com
classifiers=
   Development Status :: 1 - Planning
   Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   customtkinter
   matplotlib
   numpy
   pip
   setuptools
   wheel
   pyinstaller 

[options.packages.find]
where=src